<resources>
    <string name="app_name">SuperAlbum</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="album_camera_single">Photo album (with camera, single)</string>
    <string name="album_camera_multi">Photo album (with camera, multi)</string>
    <string name="album_selected">Photo album (with default check，do not display the puzzle button)</string>
    <string name="album_size">Photo album (Size and size limit)</string>
    <string name="album_original_usable">Photo album (display original button, available)</string>
    <string name="album_original_unusable">Photo album (display original button, not available)</string>
    <string name="album_no_menu">Photo album (no bottom edit icon button is displayed)</string>
    <string name="album_single">Photo album (no camera, single)</string>
    <string name="album_multi">Photo album (no camera,multi)</string>
    <string name="album_ad">Photo album (with advertisement)</string>
    <string name="camera">Camera</string>
    <string name="face_detection">Face detection</string>

    <!--以下是EasyPhotos的-->


    <string name="selector_folder_all_easy_photos">All Images</string>
    <string name="selector_easy_photos">Select</string>
    <!--http://stackoverflow.com/questions/17502824/whats-wrong-with-this-format-string-->
    <string name="selector_action_done_easy_photos">Done (%1$d/%2$d)</string>
    <string name="selector_preview_easy_photos">Preview</string>

    <string name="selector_reach_max_image_hint_easy_photos">You have selected %d images already!</string>
    <string name="msg_no_camera_easy_photos">Can\'t Launch Camera!</string>
    <string name="camera_temp_file_error_easy_photos">Temp File Error!</string>

    <string name="edit_easy_photos">Edit</string>

    <string name="empty_easy_photos">Empty</string>

    <string name="no_photos_easy_photos">Do not meet the requirements of the picture, take one</string>

    <string name="permissions_again_easy_photos">Please click and allow permissions</string>
    <string name="permissions_die_easy_photos">Please click and allow permissions in the settings</string>

    <string name="original_easy_photos">Original</string>

    <string name="preview_current_number_easy_photos">%1$d/%2$d</string>

    <string name="done_easy_photos">Done</string>

    <string name="cancel_easy_photos">Cancel</string>

    <string name="template_easy_photos">Template</string>

    <string name="text_sticker_easy_photos">Words</string>

    <string name="text_sticker_date_easy_photos">Date</string>

    <string name="text_sticker_hint_easy_photos">Double-click</string>

    <string name="text_sticker_hint_name_easy_photos">Custom</string>

    <string name="picture_selection_easy_photos">Photos</string>

    <string name="puzzle_easy_photos">Puzzle</string>

    <string name="select_puzzle_photos">Please select 2 \- 9 photos</string>

    <string name="gif_easy_photos">gif</string>

    <string name="video_selection_easy_photos">Video Selection</string>
    <string name="prompt_password" translatable="false">Password</string>
    <string name="action_sign_in" translatable="false">Sign in or register</string>
    <string name="action_sign_in_short" translatable="false">Sign in</string>
    <string name="welcome" translatable="false">"Welcome !"</string>
    <string name="invalid_username" translatable="false">Not a valid username</string>
    <string name="invalid_password" translatable="false">Password must be >5 characters</string>
    <string name="login_failed" translatable="false">"Login failed"</string>

</resources>
